@@ -113,7 +113,7 @@
     package.&lt;/b&gt;&lt;p&gt;
 
     The information currently here corresponds to driver version
-    5.2.1. If you use another version, have a look in the
+    5.2.2. If you use another version, have a look in the
     documentation coming with your Gutenprint package. If you have
     still a 4.x version of Gimp-Print, it is highly recommended to
     upgrade at least to Gutenprint 5.0.x.&lt;p&gt;
@@ -15329,6 +15329,26 @@
       </exception>
     </margins>
   </printer>
+  <!-- gutenprint driver: escp2-ep901a -->
+  <printer>
+    <id>printer/Epson-EP_901A</id>
+    <margins>
+      <general>
+        <relative />
+        <left>0</left>
+        <right>0</right>
+        <top>0</top>
+        <bottom>0</bottom>
+      </general>
+      <exception PageSize="w324h495">
+        <absolute />
+        <left>18</left>
+        <right>306</right>
+        <top>477</top>
+        <bottom>45</bottom>
+      </exception>
+    </margins>
+  </printer>
   <!-- gutenprint driver: escp2-pxg900 -->
   <printer>
     <id>printer/Epson-PX_G900</id>
@@ -24396,6 +24416,26 @@
       </exception>
     </margins>
   </printer>
+  <!-- gutenprint driver: escp2-of-tx600fw -->
+  <printer>
+    <id>printer/Epson-Stylus_Office_TX600FW</id>
+    <margins>
+      <general>
+        <relative />
+        <left>0</left>
+        <right>0</right>
+        <top>0</top>
+        <bottom>0</bottom>
+      </general>
+      <exception PageSize="w324h495">
+        <absolute />
+        <left>18</left>
+        <right>306</right>
+        <top>477</top>
+        <bottom>45</bottom>
+      </exception>
+    </margins>
+  </printer>
   <!-- gutenprint driver: escp2-750 -->
   <printer>
     <id>printer/Epson-Stylus_Photo_750</id>
@@ -24457,26 +24497,6 @@
       <exception PageSize="w620h782">
         <absolute />
         <right>603</right>
-      </exception>
-    </margins>
-  </printer>
-  <!-- gutenprint driver: escp2-of-tx600fw -->
-  <printer>
-    <id>printer/Epson-Stylus_Office_TX600FW</id>
-    <margins>
-      <general>
-        <relative />
-        <left>0</left>
-        <right>0</right>
-        <top>0</top>
-        <bottom>0</bottom>
-      </general>
-      <exception PageSize="w324h495">
-        <absolute />
-        <left>18</left>
-        <right>306</right>
-        <top>477</top>
-        <bottom>45</bottom>
       </exception>
     </margins>
   </printer>
@@ -37045,82 +37065,6 @@
       </exception>
     </margins>
   </printer>
-  <!-- gutenprint driver: kyocera-km-5530 -->
-  <printer>
-    <id>printer/Kyocera-KM-5530</id>
-    <margins>
-      <exception PageSize="C6">
-        <absolute />
-        <left>18</left>
-        <right>305</right>
-        <top>447</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="C5">
-        <absolute />
-        <left>18</left>
-        <right>441</right>
-        <top>637</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="DL">
-        <absolute />
-        <left>18</left>
-        <right>293</right>
-        <top>611</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="Letter">
-        <absolute />
-        <left>18</left>
-        <right>594</right>
-        <top>780</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="COM10">
-        <absolute />
-        <left>18</left>
-        <right>279</right>
-        <top>672</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="A4">
-        <absolute />
-        <left>18</left>
-        <right>577</right>
-        <top>830</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="Monarch">
-        <absolute />
-        <left>18</left>
-        <right>261</right>
-        <top>528</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="Executive">
-        <absolute />
-        <left>18</left>
-        <right>504</right>
-        <top>744</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="Legal">
-        <absolute />
-        <left>18</left>
-        <right>594</right>
-        <top>996</top>
-        <bottom>12</bottom>
-      </exception>
-      <exception PageSize="Statement">
-        <absolute />
-        <left>18</left>
-        <right>378</right>
-        <top>600</top>
-        <bottom>12</bottom>
-      </exception>
-    </margins>
-  </printer>
   <!-- gutenprint driver: gestetner-mp4500 -->
   <printer>
     <id>printer/Gestetner-MP4500</id>
@@ -37164,6 +37108,82 @@
         <absolute />
         <left>10</left>
         <right>585</right>
+        <top>830</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="Monarch">
+        <absolute />
+        <left>18</left>
+        <right>261</right>
+        <top>528</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="Executive">
+        <absolute />
+        <left>18</left>
+        <right>504</right>
+        <top>744</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="Legal">
+        <absolute />
+        <left>18</left>
+        <right>594</right>
+        <top>996</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="Statement">
+        <absolute />
+        <left>18</left>
+        <right>378</right>
+        <top>600</top>
+        <bottom>12</bottom>
+      </exception>
+    </margins>
+  </printer>
+  <!-- gutenprint driver: kyocera-km-5530 -->
+  <printer>
+    <id>printer/Kyocera-KM-5530</id>
+    <margins>
+      <exception PageSize="C6">
+        <absolute />
+        <left>18</left>
+        <right>305</right>
+        <top>447</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="C5">
+        <absolute />
+        <left>18</left>
+        <right>441</right>
+        <top>637</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="DL">
+        <absolute />
+        <left>18</left>
+        <right>293</right>
+        <top>611</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="Letter">
+        <absolute />
+        <left>18</left>
+        <right>594</right>
+        <top>780</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="COM10">
+        <absolute />
+        <left>18</left>
+        <right>279</right>
+        <top>672</top>
+        <bottom>12</bottom>
+      </exception>
+      <exception PageSize="A4">
+        <absolute />
+        <left>18</left>
+        <right>577</right>
         <top>830</top>
         <bottom>12</bottom>
       </exception>
@@ -45650,6 +45670,26 @@
         <right>378</right>
         <top>600</top>
         <bottom>12</bottom>
+      </exception>
+    </margins>
+  </printer>
+  <!-- gutenprint driver: escp2-ep901f -->
+  <printer>
+    <id>printer/Epson-EP_801F</id>
+    <margins>
+      <general>
+        <relative />
+        <left>0</left>
+        <right>0</right>
+        <top>0</top>
+        <bottom>0</bottom>
+      </general>
+      <exception PageSize="w324h495">
+        <absolute />
+        <left>18</left>
+        <right>306</right>
+        <top>477</top>
+        <bottom>45</bottom>
       </exception>
     </margins>
   </printer>
@@ -58189,26 +58229,6 @@
       </exception>
     </margins>
   </printer>
-  <!-- gutenprint driver: escp2-of-sx600fw -->
-  <printer>
-    <id>printer/Epson-Stylus_Office_SX600FW</id>
-    <margins>
-      <general>
-        <relative />
-        <left>0</left>
-        <right>0</right>
-        <top>0</top>
-        <bottom>0</bottom>
-      </general>
-      <exception PageSize="w324h495">
-        <absolute />
-        <left>18</left>
-        <right>306</right>
-        <top>477</top>
-        <bottom>45</bottom>
-      </exception>
-    </margins>
-  </printer>
   <!-- gutenprint driver: gestetner-dsm755 -->
   <printer>
     <id>printer/Gestetner-DSm755</id>
@@ -58282,6 +58302,26 @@
         <right>378</right>
         <top>600</top>
         <bottom>12</bottom>
+      </exception>
+    </margins>
+  </printer>
+  <!-- gutenprint driver: escp2-of-sx600fw -->
+  <printer>
+    <id>printer/Epson-Stylus_Office_SX600FW</id>
+    <margins>
+      <general>
+        <relative />
+        <left>0</left>
+        <right>0</right>
+        <top>0</top>
+        <bottom>0</bottom>
+      </general>
+      <exception PageSize="w324h495">
+        <absolute />
+        <left>18</left>
+        <right>306</right>
+        <top>477</top>
+        <bottom>45</bottom>
       </exception>
     </margins>
   </printer>
@@ -66539,6 +66579,26 @@
       </exception>
     </margins>
   </printer>
+  <!-- gutenprint driver: escp2-ep801a -->
+  <printer>
+    <id>printer/Epson-EP_801A</id>
+    <margins>
+      <general>
+        <relative />
+        <left>0</left>
+        <right>0</right>
+        <top>0</top>
+        <bottom>0</bottom>
+      </general>
+      <exception PageSize="w324h495">
+        <absolute />
+        <left>18</left>
+        <right>306</right>
+        <top>477</top>
+        <bottom>45</bottom>
+      </exception>
+    </margins>
+  </printer>
   <!-- gutenprint driver: ricoh-afc_mp_5000 -->
   <printer>
     <id>printer/Ricoh-Aficio_MP_5000</id>
@@ -68069,6 +68129,26 @@
         <right>378</right>
         <top>600</top>
         <bottom>12</bottom>
+      </exception>
+    </margins>
+  </printer>
+  <!-- gutenprint driver: escp2-dx4850 -->
+  <printer>
+    <id>printer/Epson-Stylus_DX4850</id>
+    <margins>
+      <general>
+        <relative />
+        <left>0</left>
+        <right>0</right>
+        <top>0</top>
+        <bottom>0</bottom>
+      </general>
+      <exception PageSize="w324h495">
+        <absolute />
+        <left>18</left>
+        <right>306</right>
+        <top>477</top>
+        <bottom>45</bottom>
       </exception>
     </margins>
   </printer>
