@@ -73,9 +73,13 @@
   <en>
 
     &lt;b&gt;NOTE: This entry is for the second release candidate of
-    the upcoming SpliX 2.0.0. This version is not yet intended for
-    daily production use. It can have regressions against the current
-    stable release 1.1.1. Use this release if you want to try the new
+    the upcoming SpliX 2.0.0. The packages which are currently
+    available for download on this site are for a Subversion snapshot
+    shortly after RC2 (rev 251) which fixes important bugs in the
+    RC2. It is highly recommended to update to this version. But
+    nevertheless, this version is not yet intended for daily
+    production use. It can have regressions against the current stable
+    release 1.1.1. Use this release if you want to try the new
     generation of SpliX or if you have a printer which is not
     supported otherwise. For the stable release &lt;a
     href=&quot;show_driver.cgi?driver=splix&quot;&gt;go
