@@ -1,3 +1,11 @@
+2008-11-29  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/gutenprint.xml: Updated to the current stable release 5.2.2
+	  of Gutenprint.
+
+	* driver/splix2.xml: Added note about bug fixes in the currently
+	  downloadable driver packages.
+
 2008-11-26  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/laserjet.xml, driver/ljet2p.xml, driver/ljet3.xml,
